# models/students.js
@@ -1,0 +1,31 @@
+const mongoose = require('mongoose');
+
+const studentSchema = new mongoose.Schema({
+  firstName: {
+    type: String,
+    required: true
+  },
+  lastName: {
+    type: String,
+    required: true
+  },
+  email: {
+    type: String,
+    required: true,
+    unique: true
+  },
+  major: {
+    type: String,
+    required: true
+  },
+  gpa: {
+    type: Number,
+    required: true
+  },
+  year: {
+    type: Number,
+    required: true
+  }
+});
+
+module.exports = mongoose.model('Student', studentSchema);
