# routes/books.js
@@ -1,15 +1,0 @@
-const router = require('express').Router();
-
-const booksController = require('../controllers/booksController');
-
-router.get('/', booksController.getAllBooks);
-
-router.get('/:id', booksController.getSingleBook);
-
-router.post('/', booksController.createBook);
-
-router.put('/:id', booksController.updateBook);
-
-router.delete('/:id', booksController.deleteBook);
-
-module.exports = router;
