# routes/index.js
@@ -1,7 +1,8 @@
 const router = require('express').Router();
 
-router.use('/books', require('./books'));
-router.use('/authors', require('./authors'));
+router.use('/students', require('./students'));
+
+router.use('/courses', require('./courses'));
 
 router.get('/', (req, res) => {
   res.send('Project 2 API Running');
