# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Project 2 API",
-    "description": "Books and Authors API",
+    "description": "Students and Courses API",
     "version": "1.0.0"
   },
   "host": "cse341-project2-hnxa.onrender.com",
@@ -21,7 +21,7 @@
         }
       }
     },
-    "/books/": {
+    "/students/": {
       "get": {
         "description": "",
         "responses": {
@@ -42,26 +42,23 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "Things Fall Apart"
+                "firstName": {
+                  "example": "any"
                 },
-                "author": {
-                  "example": "Chinua Achebe"
+                "lastName": {
+                  "example": "any"
                 },
-                "genre": {
-                  "example": "Fiction"
+                "email": {
+                  "example": "any"
                 },
-                "publishedYear": {
-                  "example": "1952"
+                "major": {
+                  "example": "any"
                 },
-                "pages": {
-                  "example": "208"
+                "gpa": {
+                  "example": "any"
                 },
-                "price": {
-                  "example": "20.99"
-                },
-                "language": {
-                  "example": "English"
+                "year": {
+                  "example": "any"
                 }
               }
             }
@@ -80,7 +77,7 @@
         }
       }
     },
-    "/books/{id}": {
+    "/students/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -148,7 +145,7 @@
         }
       }
     },
-    "/authors/": {
+    "/courses/": {
       "get": {
         "description": "",
         "responses": {
@@ -169,26 +166,17 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "Aminah"
+                "courseName": {
+                  "example": "any"
                 },
-                "lastName": {
-                  "example": "Nakalyowa"
+                "courseCode": {
+                  "example": "any"
                 },
-                "email": {
-                  "example": "aminah@gmail.com"
+                "instructor": {
+                  "example": "any"
                 },
-                "nationality": {
-                  "example": "Ugandan"
-                },
-                "age": {
-                  "example": "29"
-                },
-                "genre": {
-                  "example": "Novel"
-                },
-                "booksPublished": {
-                  "example": "14"
+                "credits": {
+                  "example": "any"
                 }
               }
             }
@@ -207,7 +195,7 @@
         }
       }
     },
-    "/authors/{id}": {
+    "/courses/{id}": {
       "get": {
         "description": "",
         "parameters": [
